--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
   <div class=" post_in_box d-flex flex-column">
 
     <img id= "post_pic" src="{{post.head_image.url}}" alt="">
-    <div class="container d-flex flex-column">
+    <div class="px-4 d-flex flex-column">
 
  <div class="post_date">
    {{ post.created_date }}
