--- a/templates/post_edit.html
+++ b/templates/post_edit.html
@@ -3,7 +3,7 @@
 {% block content %}
 <br>
 <br>
-<div class="containeri">
+<div class="post-entry container">
   <h1>Edit post</h1>
   <form action="" method="post">
     {% csrf_token %}
