--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -107,16 +107,16 @@
 
  {% for comment in post.comments.all %}
                                       <div class="media is-comment">
-                                        <div class="user-image">
+                                            <div class="user-image">
                     
-              
-              
+
               <img  src="https://i.pinimg.com/originals/0c/3b/3a/0c3b3adb1a7530892e55ef36d3be6cb8.png" alt="">
+              
               
               
 
                       
-                      
+                      <span class="indicator"></span>
                   </div>
                                           <div class="media-content">
                                               <div class="comment-meta">
