--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -107,17 +107,20 @@
 
  {% for comment in post.comments.all %}
                                       <div class="media is-comment">
-                                            <div class="user-image">
-                    
-
-              <img  src="https://i.pinimg.com/originals/0c/3b/3a/0c3b3adb1a7530892e55ef36d3be6cb8.png" alt="">
-              
-              
-              
-
-                      
-                      <span class="indicator"></span>
-                  </div>
+                                             <figure class="media-left">
+                                              <div class="avatar-wrap is-smaller">
+                                                
+                                                <div class="story-avatar" style="    width: 32px;height: 32px;min-width: 45px;">
+                                                    
+                                              
+                                                  <img  src="https://i.pinimg.com/originals/0c/3b/3a/0c3b3adb1a7530892e55ef36d3be6cb8.png" alt="">
+                                
+                                                      
+                                                      
+                                                  
+                                                </div>
+                                              </div>
+                                          </figure>
                                           <div class="media-content">
                                               <div class="comment-meta">
                                                   <h4 style="font-weight: bold;"><a>{{ comment.author }}</a> <small> · {{comment.created_date}}</small></h4>
