--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-site-verification" content="JUpNKTIxmf1RuhX3_SQlqaEfwtNloWAChefJ9CBzFwg" />
   <title></title>
   <a href="https://icons8.com/icon/kQHsISBrvw4y/compose"></a>
   <link rel="preconnect" href="https://fonts.gstatic.com">
