--- a/templates/base.html
+++ b/templates/base.html
@@ -5,9 +5,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="google-site-verification" content="JUpNKTIxmf1RuhX3_SQlqaEfwtNloWAChefJ9CBzFwg" />
-  <title></title>
-  <a href="https://icons8.com/icon/kQHsISBrvw4y/compose"></a>
+  <meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
+ 
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -37,9 +38,7 @@
 <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/manifest.json">
-<meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-<meta name="theme-color" content="#ffffff">
+
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
 <style>.content h1, .content h2, .content h3, .content h4, .content h5, .content h6 {
@@ -47,250 +46,19 @@
   font-weight: 200;
   line-height: 1.125;
 }</style>
+ 
+  
+
 </head>
 
 
-<!-- <body>
-  <div class="container fixed-top navcont">
-    <header class="blog-header py-3">
-      <div class="row flex-nowrap justify-content-between align-items-center">
-
-        <div class="col-6 text-start ">
-
-          <a class="blog-header-logo navbar-brand title" href="{% url 'home' %}#">#SOCIALBLOG</a>
-
-        </div>
-        <div class="col-6 d-flex justify-content-end align-items-center">
-          <<a class="link-secondary" href="#" aria-label="Search">
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24"><title>Search</title><circle cx="10.5" cy="10.5" r="7.5"></circle><path d="M21 21l-5.2-5.2"></path></svg>
-          </a> -->
-<!-- 
-          {% if user.is_authenticated %}
-          <ul class="navbar-nav navtext  ml-auto">
-
-
-            <li class="nav-item dropdown flex-grow-1">
-
-              <a class=" nav-link dropdown-toggle profile-name" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                {% if user.userprofileinfo.profile_pic %}
-
-                <img id="profileimage" src="{{user.userprofileinfo.profile_pic.url}}" alt="">
-                {% else %}
-                {% endif %}
-                {{ user.username|slice:8}}
-
-              </a>
-              <div class="dropdown-menu position-absolute dropdown-css dropdown-menu-right" aria-labelledby="navbarDropdown" style="max-width: 560px;">
-                <a class="dropdown-item" href="{% url 'post_new' %}">NEW POST</a>
-
-
-                <div class="dropdown-divider "></div>
-                <a class="dropdown-item " href="#"><a href="{% url 'logout' %}"><button type="button" class="btn btn-danger btn-logout mx-4 px-4">Log out</button></a></a>
-              </div>
-            </li>
-
-          </ul>
-          {% else %}
-
-
-          <ul class="d-flex flex-row-reverse bd-highlight">
-
-
-
-
-            <li class="nav-item d-flex">
-              <a href="{% url 'register' %}"><button type="button" class="btn btn-outline-dark buttons" name="button">register</button></a>
-            </li>
-            <li class="nav-item d-flex">
-              <a href="{% url 'login' %}"><button type="button" class="btn btn-outline-success buttons mx-2" name="button">signin</button></a>
-            </li>
-
-          </ul>
-          {% endif %}
-        </div>
-
-      </div>
-    </header>
-
-
-
-  </div>
-<br>
-<br>
-<br>
-<br>  -->
-
-  <!-- <div class="container-fluid px-5">
-
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top navbar-css">
-      <div class="container">
-
-
-        <a class="navbar-brand title" href="{% url 'home' %}#">#SOCIAL BLOG</a>
-        {% if user.is_authenticated %}
-        <ul class="navbar-nav navtext  ml-auto">
-
-
-          <li class="nav-item dropdown flex-grow-1">
-
-            <a class=" nav-link dropdown-toggle profile-name" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              {% if user.userprofileinfo.profile_pic %}
-
-              <img id="profileimage" src="{{user.userprofileinfo.profile_pic.url}}" alt="">
-              {% else %}
-              {% endif %}
-              {{ user.username|slice:8}}
-
-            </a>
-            <div class="dropdown-menu position-absolute dropdown-css" aria-labelledby="navbarDropdown" style="max-width: 560px;">
-              <a class="dropdown-item" href="{% url 'post_new' %}">NEW POST</a>
-
-
-              <div class="dropdown-divider "></div>
-              <a class="dropdown-item " href="#"><a href="{% url 'logout' %}"><button type="button" class="btn btn-danger btn-logout mx-4 px-4">Log out</button></a></a>
-            </div>
-          </li>
-
-        </ul>
-        {% else %}
-
-
-        <ul class="d-flex flex-row-reverse bd-highlight">
-
-
-
-
-          <li class="nav-item d-flex">
-            <a href="{% url 'register' %}"><button type="button" class="btn btn-outline-dark" name="button">register</button></a>
-          </li>
-          <li class="nav-item d-flex">
-            <a href="{% url 'login' %}"><button type="button" class="btn btn-outline-success mx-2" name="button">sign in</button></a>
-          </li>
-
-        </ul>
-        {% endif %}
-
-      </div>
-  </div>
-  </nav>
-
-
-
-  </div>
-
-  <br>
-  <br>
-  <br>
- -->
+ 
  <body class="is-white">
 
   <!-- Pageloader -->
   
 
-  <div class="navbar-v2">
-      <div class="top-nav">
-          <div class="left">
-              <div class="brand">
-                  <a href="/" class="navbar-logo">
-                      <img class="logo light-image" src="https://nitinsinghbucket.s3.ap-south-1.amazonaws.com/static/iconi.png" width="112" height="28" alt="">
-                      <img class="logo dark-image" src="https://nitinsinghbucket.s3.ap-south-1.amazonaws.com/static/iconi.png" width="112" height="28" alt="">
-                  </a>
-              </div>
-              
-          </div>
-          <div class="right">
-              
-
-              
-              <div class="navbar-item is-icon drop-trigger">
-                  
-                <h4>{{ user.username }}</h4>
-                  
-                    
-              </div>
-              
-              
-              
-              <div id="account-dropdown" class="navbar-item is-account drop-trigger has-caret">
-                {% if user.is_authenticated %}
-                  <div class="user-image">
-                    {% if user.userprofileinfo.profile_pic %}
-
-              <img  src="{{user.userprofileinfo.profile_pic.url}}" alt="">
-              
-              {% else %}
-              <img  src="https://i.pinimg.com/originals/0c/3b/3a/0c3b3adb1a7530892e55ef36d3be6cb8.png" alt="">
-              {% endif %}
-              
-
-                      
-                      <span class="indicator"></span>
-                  </div>
-                  
-                  <div class="nav-drop is-account-dropdown">
-                      <div class="inner">
-                          <div class="nav-drop-header">
-                             <h4><span class="username">{{ user.username }}</span></h4> 
-                              <label class="theme-toggle">
-                                  <input type="checkbox">
-                                  <span class="toggler">
-                                          <span class="dark">
-                                              <i data-feather="moon"></i>
-                                          </span>
-                                  <span class="light">
-                                              <i data-feather="sun"></i>
-                                          </span>
-                                  </span>
-                              </label>
-                          </div>
-                          <div class="nav-drop-body account-items">
-                              
-                              <hr class="account-divider">
-                              
-                              
-                              
-                              <a class="account-item" href="{% url 'post_new' %}">
-                                  <div class="media">
-                                      <div class="icon-wrap">
-                                        <i class="fas fa-blog"></i>
-                                      </div>
-                                      <div class="media-content">
-                                          <h3>New Blog</h3>
-                                          <small>Write a blog</small>
-                                      </div>
-                                  </div>
-                              </a>
-                              <a class="account-item" href="{% url 'logout' %}">
-                                  <div class="media">
-                                      <div class="icon-wrap" >
-                                          <i data-feather="power"></i>
-                                      </div>
-                                      <div class="media-content">
-                                        <h3>Log out</h3>
-                                        <small>Write a blog</small>
-                                    </div>
-                                        
-                                          
-                                          
-                                  </div>
-                              </a>
-                          </div>
-                      </div>
-                  </div>
-                  {% else %}
-                    <div>
-                      
-                        <a href="{% url 'login' %}"><button type="button" class="btn btn-outline-success buttons mx-2" name="button">signin</button></a>
-                      
-                    </div>
-                  {% endif %}
-              </div>
-          </div>
-          <!--Search-->
-          
-      </div>
-      
-  </div>
+  {% include "nav.html" %}
   <br>
 
 
