--- a/templates/base.html
+++ b/templates/base.html
@@ -90,24 +90,24 @@
   <script src="{% static "js/tour.js" %}"> </script>
 
   <!-- Components js -->
-  <script src="{% static "js/explorer.js" %}"> </script>
+  <!-- <script src="{% static "js/explorer.js" %}"> </script>
   <script src="{% static "js/widgets.js" %}"> </script>
   <script src="{% static "js/modal-uploader.js" %}"> </script>
   <script src="{% static "js/popovers-users.js" %}"> </script>
   <script src="{% static "js/popovers-pages.js" %}"> </script>
-  <script src="{% static "js/lightbox.js" %}"> </script>
+  <script src="{% static "js/lightbox.js" %}"> </script> -->
 
   <!-- Landing page js -->
 
   <!-- Signup page js -->
   <script src="{% static "js/stories.js" %}"> </script>
-  <!-- Feed pages js -->
+  <!-- Feed pages js
   
   <script src="{% static "js/feed.js" %}"> </script>
 
   <script src="{% static "js/webcam.js" %}"> </script>
   <script src="{% static "js/compose.js" %}"> </script>
-  <script src="{% static "js/autocompletes.js" %}"> </script>
+  <script src="{% static "js/autocompletes.js" %}"> </script> -->
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
